Issue #3659: Values of string subclasses were not handled correctly when used as bind parameters.

Reviewed by Bejnamin Peterson.