Modules/_sqlite/statement.c
@@ -43,7 +43,6 @@ typedef enum {
 typedef enum {
     TYPE_LONG,
     TYPE_FLOAT,
-    TYPE_STRING,
     TYPE_UNICODE,
     TYPE_BUFFER,
     TYPE_UNKNOWN
@@ -96,7 +95,6 @@ int pysqlite_statement_bind_parameter(pysqlite_Statement* self, int pos, PyObjec
     char* string;
     Py_ssize_t buflen;
     parameter_type paramtype;
-    char* c;
 
     if (parameter == Py_None) {
         rc = sqlite3_bind_null(self->st, pos);
@@ -114,22 +112,11 @@ int pysqlite_statement_bind_parameter(pysqlite_Statement* self, int pos, PyObjec
     } else if (PyFloat_Check(parameter)) {
         paramtype = TYPE_FLOAT;
     } else if (PyUnicode_Check(parameter)) {
-        paramtype = TYPE_STRING;
+        paramtype = TYPE_UNICODE;
     } else if (PyObject_CheckBuffer(parameter)) {
         paramtype = TYPE_BUFFER;
     } else {
         paramtype = TYPE_UNKNOWN;
-    }
-
-    if (paramtype == TYPE_STRING && !allow_8bit_chars) {
-        string = PyBytes_AS_STRING(parameter);
-        for (c = string; *c != 0; c++) {
-            if (*c & 0x80) {
-                PyErr_SetString(pysqlite_ProgrammingError, "You must not use 8-bit bytestrings unless you use a text_factory that can interpret 8-bit bytestrings (like text_factory = str). It is highly recommended that you instead just switch your application to Unicode strings.");
-                rc = -1;
-                goto final;
-            }
-        }
     }
 
     switch (paramtype) {
